--- a/css/index.css
+++ b/css/index.css
@@ -107,3 +107,46 @@
         padding-left: 250px;
     }
 }
+
+/* styles.css */
+
+/* Custom styles for the table container */
+#test-table {
+    margin-top: 20px;
+}
+
+/* Custom styles for the table */
+.custom-table {
+    width: 100%;
+    border: 1px solid #ddd; /* Bootstrap border color */
+    border-collapse: collapse;
+    margin-bottom: 20px;
+    border-radius: 10px; /* Adjust the value as needed for the desired roundness */
+    overflow: hidden; /* Ensures rounded corners are applied */
+}
+
+/* Custom styles for table headers */
+.custom-table th {
+    background-color: rgb(68, 66, 66); /* Updated color from #007bff */
+    color: #fff;
+    padding: 15px;
+    text-align: left;
+}
+
+/* Custom styles for table cells */
+.custom-table td {
+    padding: 15px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+/* Stripe effect on table rows */
+.custom-table tbody tr:nth-child(even) {
+    background-color: #f5f5f5; /* Light gray for striped effect */
+}
+
+/* Hover effect on table rows */
+.custom-table tbody tr:hover {
+    background-color: #e0e0e0; /* Lighter gray on hover */
+}
