--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,17 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+#main-container {
+    margin-left: 20%; /* Adjust this value based on the width of your navbar */
+    /* Other styles */
+}
+
+.custom-table {
+    width: 80%; /* Adjust 250px to the width of your navbar */
+    /* Other styles */
+}
+
+
 #wrapper {
     padding-left: 250px;
 }
