--- a/css/index.css
+++ b/css/index.css
@@ -756,5 +756,179 @@ textarea {
 
 
 
+#user-info-dropdown {
+    background-color: #444242FF;
+    color: #fff;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: inline-block;
+    box-sizing: border-box;
+    overflow-wrap: break-word; /* Breaks words that exceed the box width */
+    max-width: 700px; /* Set the maximum width to control when it goes to a new line */
+}
+
+#user-info-dropdown div {
+    margin-bottom: 8px;
+}
+
+#user-info-dropdown span.property-key {
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #ff00ea; /* Key color */
+}
+
+#user-info-dropdown span.property-value {
+    color: #0bff00; /* Value color */
+}
+#dropdown-buttonUser{
+    background-color: #444242FF;
+    color: #fff;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#dropdown-buttonUser:hover {
+    background-color: #5e5c5c; /* Darker shade of Bootstrap primary color */
+}
+
+/*
+Show user request and messages
+ */
+#user-request-container,
+#messages-container,
+#create-message-container {
+    border: 1px solid #c4c4c4;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    padding: 20px;
+    background-color: #e5e4e4;
+}
+
+#user-request-container h2,
+#messages-container h2,
+#create-message-container h2 {
+    font-weight: bold;
+    font-size: 1.5em;
+    margin-bottom: 15px;
+}
+
+.elegant-user-info-property,
+.message-property {
+    margin-bottom: 10px;
+}
+
+.elegant-property-key,
+.message-property {
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+#messages-container {
+    margin-top: 20px;
+}
+
+#messages-list {
+    list-style: none;
+    padding: 0;
+}
+
+#messages-list li {
+    border: 1px solid #c4c4c4;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+#messages-list li p {
+    margin: 0;
+}
+
+#createMessageForm {
+    margin-top: 20px;
+}
+
+#messageText {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+#createMessageButton {
+    background-color: #444242;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#createMessageButton:hover {
+    background-color: #5e5c5c;
+}
 
 
+
+/*
+Login
+ */
+.container-login {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+
+}
+
+.col {
+    background-color: #f8f9fa;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 400px; /* Adjust the maximum width as needed */
+    width: 100%; /* Make it responsive */
+}
+
+#bigLogin {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.form-control {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ced4da;
+    border-radius: 4px;
+}
+
+.btn-primary {
+    background-color: #444242;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btn-primary:hover {
+    background-color: #5e5c5c;
+}
